# proteaaudio-test

./: LICENSE  proteaaudio-test.cabal
app/: Main.hs
