cabal-version:      3.0
name:               proteaaudio-test
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             huantian
maintainer:         davidtianli@gmail.com
-- copyright:
category:           Sound
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -threaded -Wall

    default-extensions:
        TemplateHaskell

executable proteaaudio-test
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        proteaaudio ^>= 0.10.1,
        proteaaudio-sdl ^>= 0.10.1,
        vty >= 6.0,
        brick ^>= 2.1.1,
        microlens-th ^>= 0.4.3.14,
        microlens-mtl ^>= 0.2.0.3,
    hs-source-dirs:   app
    default-language: GHC2021
